templates/g5_helium/custom/scss/tchooz.scss
/* ... */
.mod_emundus_campaign__pinned_campaign .mod_emundus_campaign__list_content #background-shapes {
  position: absolute;
  z-index: 2;
  width: 79%;
  height: 52%;
  top: 0;
  right: 0;
  pointer-events: none;
  mask-image: url('/modules/mod_emundus_campaign/assets/fond-clair.svg');
  -webkit-mask-image: url('/modules/mod_emundus_campaign/assets/fond-clair.svg');
  background: var(--em-profile-color);
  mask-repeat: no-repeat;
  -webkit-mask-repeat: no-repeat;
  mask-position: center;
  -webkit-mask-position: center;
  mask-size: 300px;
  -webkit-mask-size: 300px;
  mask-origin: border-box;
}

.mod_emundus_campaign__list_content #background-shapes.single-campaign-pinned {
  position: absolute;
  z-index: 2;
  width: 64%;
  height: 86%;
  top: 0;
  right: 0;
  pointer-events: none;
  mask-image: url('/modules/mod_emundus_campaign/assets/fond-clair.svg');
  -webkit-mask-image: url('/modules/mod_emundus_campaign/assets/fond-clair.svg');
  background: var(--em-profile-color);
  mask-repeat: no-repeat;
  -webkit-mask-repeat: no-repeat;
  mask-position: center;
  -webkit-mask-position: center;
  mask-size: 300px;
  -webkit-mask-size: 300px;
  mask-origin: border-box;
  transform: scale(1.6);
}

.view-featured .mod_emundus_campaign__list_content--default {
  position: relative;
  overflow: hidden;
  margin: 0 0 20px;

  #background-shapes {
    position: absolute;
    z-index: 2;
    width: 33%;
    height: 170%;
    top: -142px;
    right: 0;
    pointer-events: none;
    mask-image: url('/modules/mod_emundus_campaign/assets/fond-clair.svg');
    -webkit-mask-image: url('/modules/mod_emundus_campaign/assets/fond-clair.svg');
    background: var(--em-profile-color);
    mask-repeat: no-repeat;
    -webkit-mask-repeat: no-repeat;
    mask-position: center;
    -webkit-mask-position: center;
    mask-size: 413px;
    -webkit-mask-size: 413px;
    mask-origin: border-box;
  }
}

.view-article .mod_emundus_campaign__list_content--default {
  position: relative;
  overflow: hidden;

  #background-shapes {
    position: absolute;
    z-index: 2;
    width: 24%;
    height: 170%;
    top: 0;
    right: 0;
    pointer-events: none;
    mask-image: url('/modules/mod_emundus_campaign/assets/fond-clair.svg');
    -webkit-mask-image: url('/modules/mod_emundus_campaign/assets/fond-clair.svg');
    background: var(--em-profile-color);
    mask-repeat: no-repeat;
    -webkit-mask-repeat: no-repeat;
    mask-position: center;
    -webkit-mask-position: center;
    mask-size: 300px;
    -webkit-mask-size: 300px;
    mask-origin: border-box;
  }
}

/* Titres */
div[id^='current_'] .mod_emundus_campaign__list_content h3 {
  color: var(--em-profile-color);
  font-size: var(--em-applicant-h4);
}

.mod_emundus_campaign__list_content--default h3 {
  color: var(--em-profile-color);
}

/* Campagnes clôturées */
.tile-hover-offset-procedure--closed {
  background: var(--neutral-500) !important;
}

.mod_emundus_campaign__list_content--closed .mod_emundus_campaign__campaign_title {
  color: var(--neutral-600) !important;
}

/*******************
 *    Peps liste   *
 *******************/

#applications_list_view table:first-child thead tr th:first-child {
  padding-left: 32px;
}

#applications_list_view table:nth-child(2) {
  border-collapse: separate;
  border-spacing: 0 16px;
}

#applications_list_view table tbody tr {
  box-shadow: var(--em-box-shadow-x-1) var(--em-box-shadow-y-1) var(--em-box-shadow-blur-1) var(--em-box-shadow-color-1), var(--em-box-shadow-x-2) var(--em-box-shadow-y-2) var(--em-box-shadow-blur-2) var(--em-box-shadow-color-2), var(--em-box-shadow-x-3) var(--em-box-shadow-y-3) var(--em-box-shadow-blur-3) var(--em-box-shadow-color-3);
  border-radius: 8px;

  td {
    padding: var(--p-16) var(--p-32);
    position:relative;
    background: var(--neutral-0);

    p {
      color: var(--neutral-600);
    }
  }

  td:first-child {
    border-radius: 8px 0 0 8px;
  }

  td:last-child {
    border-radius: 0 8px 8px 0;
  }
}

/* Fond formes */
#applications_list_view table tbody tr td #background-shapes {
  position: absolute;
  z-index: 12;
  width: 100%;
  height: 100%;
  top: 0;
  left: 871px;
  pointer-events: none;
  border-bottom-right-radius: 14px;
  transform: scale(1.15);
  mask-image: url('/modules/mod_emundus_user_dropdown/assets/fond-formes-header-fonce.svg');
  -webkit-mask-image: url('/modules/mod_emundus_user_dropdown/assets/fond-formes-header-fonce.svg');
  background: var(--em-profile-color);
  mask-repeat: no-repeat;
  -webkit-mask-repeat: no-repeat;
  mask-position: center;
  -webkit-mask-position: center;
  mask-size: contain;
  -webkit-mask-size: contain;
}

.mod_emundus_campaign__details_content {
  position: relative;
  overflow: hidden;
}

.mod_emundus_campaign__details_content #background-shapes {
  position: absolute;
  z-index: 0;
  height: 199px;
  width: 388px;
  top: 0;
  left: 0;
  pointer-events: none;
  mask-image: url('/modules/mod_emundus_campaign/assets/fond-clair.svg');
  -webkit-mask-image: url('/modules/mod_emundus_campaign/assets/fond-clair.svg');
  background: var(--em-profile-color);
  mask-repeat: no-repeat;
  -webkit-mask-repeat: no-repeat;
  mask-position: center;
  -webkit-mask-position: center;
  mask-size: 300px;
  -webkit-mask-size: 300px;
  mask-origin: border-box;
  transform: scale(1.1);
}

.mod_emundus_campaign__details_content .em-applicant-default-font,
.mod_emundus_campaign__details_content .em-disabled-button {
  position: relative;
  z-index: 2;
}

/* Formes vue liste des cards */
.em-ml-12 tbody tr td div span.label {
  z-index: 14;
}
/* ... */

